--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ main {
 .overlay {
   position: fixed;
   top: 0;
-  bottom: 0;
+  bottom: 300px;
   left: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.44);
@@ -172,7 +172,6 @@ main {
   padding: 0;
   border: 1px solid #E5E5E5;
   float: left;
-  bag
 }
 
 .input-value {
@@ -221,4 +220,9 @@ main {
 .activ {
   background-color: #833AE0;
   color: white;
+}
+
+.lotti-plaer  {
+  width: 300px;
+  height: 300px;
 }
