--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ main {
 .overlay {
   position: fixed;
   top: 0;
-  bottom: 300px;
+  bottom: 0;
   left: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.44);
