trying to make ghpages work as expected

--- a/media.css
+++ b/media.css
@@ -26,7 +26,15 @@
     justify-content: space-around;
   }
 
+  .header-box {
+    margin-bottom: 16px;
+  }
+
   .arroy-img {
     padding-top: 24px;
+  }
+
+  .input-about {
+    width: 80%;
   }
 }
